<resources>
    <string name="app_name">MP1 Bitwise Calculator</string>
    <string name="open_parenthesis">(</string>
    <string name="closing_parenthesis">)</string>
    <string name="shift_left"><![CDATA[<<]]></string>
    <string name="shift_right"><![CDATA[>>]]></string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="bitwise_AND"><![CDATA[&]]></string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="bitwise_OR">|</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="bitwise_XOR">^</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="bitwise_inversion">~</string>
    <string name="clear">AC</string>
    <string name="_202110356_jasmine_camasura">202110356: Jasmine Camasura</string>
    <string name="operation">Operation</string>
    <string name="result">Result</string>
    <string name="bitwise_calculator">Bitwise Calculator</string>
</resources>