<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/dark_gray">

    <TextView
        android:id="@+id/tv0"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/bitwise_calculator"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:textSize="23sp"
        android:textColor="@color/light_gray"
        android:background="@color/dark_gray"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="40sp"
        android:background="@color/dark_gray"
        android:textColor="@color/orange"/>

    <GridLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_marginTop="35dp"
        android:layout_gravity="center">

        <!-- Row 1 -->
        <Button
            android:id="@+id/btn_open_parenthesis"
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/open_parenthesis"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/light_gray"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>
        <Button
            android:id="@+id/btn_closing_parenthesis"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/closing_parenthesis"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/light_gray"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>
        <Button
            android:id="@+id/btn_shift_left"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/shift_left"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/light_gray"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>
        <Button
            android:id="@+id/btn_shift_right"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/shift_right"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/light_gray"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn7"
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_7"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_8"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_9"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_bitwise_AND"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/bitwise_AND"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/orange"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>

        <!-- Row 3 -->
        <Button
            android:id="@+id/btn4"
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_4"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_5"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_6"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_bitwise_OR"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/bitwise_OR"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/orange"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>

        <!-- Row 4 -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_1"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_2"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/_3"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_bitwise_XOR"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/bitwise_XOR"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/orange"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>

        <!-- Row 5 -->
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/clear"
            android:onClick="onNumberClick"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="1dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:onClick="onOperatorClick"
            android:padding="5dp"
            android:text="@string/_0"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/equals"
            android:onClick="calculateBitwiseExpression"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_bitwise_inversion"
            android:layout_width="1dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/bitwise_inversion"
            android:onClick="onOperatorClick"
            android:backgroundTint="@color/orange"
            android:textSize="23sp"
            android:textColor="@color/dark_gray"/>
    </GridLayout>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/_202110356_jasmine_camasura"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="71dp"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:background="@color/gray"/>
</LinearLayout>